--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
     <div id="workSpace" style="display: none;">
         <div id="navBar" class="container">
             <div class="row">
-                <div id="navHome" class="col selected-nav navOption border rounded">
+                <div id="navHome" class="col selected-nav navOption border rounded" onclick="showHome()">
                     <label class="fw400">Home</label>
                 </div>
-                <div id="navHistory" class="col deselected-nav navOption border rounded">
+                <div id="navHistory" class="col deselected-nav navOption border rounded" onclick="showHistory()">
                     <label class="fw400">History</label>
                 </div>
-                <div id="navClients" class="col deselected-nav navOption border rounded">
+                <div id="navClients" class="col deselected-nav navOption border rounded" onclick="showClients()">
                     <label class="fw400">Clients</label>
                 </div>
             </div>
