--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             </div>
         </div>
         <div id="home">
-            <div id="homeMenu" class="container m-2">
-                <div class="row">
+            <div id="homeMenu" class="container">
+                <div class="row m-2">
                     <div class="col">
-                        <button id="newPrenotationBtn" class="btn btn-outline-dark" onclick="newPrenotation()"><label class="fw400">New Prenotation</label></button>
+                        <button class="btn btn-outline-dark" onclick="newPrenotation()"><label class="fw400">New Prenotation</label></button>
                     </div>
                 </div>
             </div>
