--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id="home">
             <div class="container-fluid">
                 <div class="row mt-2 mb-3">
-                    <div class="col-sm">
+                    <div class="col">
                         <h1>Prenotations</h1>
                     </div>
                     <div class="col">
