--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
                     </div>
                     <div class="col">
                         <div id="homeMenu" class="row mt-3">
-                            <div class="col">
-                                <button class="btn btn-outline-dark" onclick="newPrenotation()"><label class="fw400">New Prenotation</label></button>
+                            <div class="col d-flex justify-content-end">
+                                <button class="btn btn-outline-light m-1" title="Profile"><img src="img/symbol_person.svg" width="30" height="30"></button>
+                                <button class="btn btn-outline-light m-1" onclick="newPrenotation()" title="New prenotation"><img src="img/symbol_newPrenotation.svg" width="30" height="30"></button>
                             </div>
                         </div>
                     </div>
@@ -110,6 +111,8 @@
         </div>
         <div id="history" style="display:none;">
 
+        </div>
+        <div id="clients" style="display:none;">
         </div>
     </div>
 
