--- a/index.html
+++ b/index.html
@@ -133,42 +133,15 @@
     </div>
 
     <div id="navBar" class="container-fluid fixed-bottom" style="display: none;">
-        <div class="row p-2">
-            <div id="navHome" class="col selected-nav navOption border rounded" onclick="showHome()">
-                <div class="row">
-                    <div class="col">
-                        <img src="img/symbol_home.svg" width="30" height="30" class="align-bottom">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <label class="txtSmall-bold">Home</label>
-                    </div>
-                </div>
+        <div class="row">
+            <div id="navHome" class="col selected-nav navOption border rounded" onclick="showHome()" title="Home">
+                <img src="img/symbol_home.svg" width="40" height="40">
             </div>
-            <div id="navHistory" class="col deselected-nav navOption border rounded" onclick="showHistory()">
-                <div class="row">
-                    <div class="col">
-                        <img src="img/symbol_history.svg" width="30" height="30" class="align-bottom">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <label class="txtSmall-bold">History</label>
-                    </div>
-                </div>
+            <div id="navHistory" class="col deselected-nav navOption border rounded" onclick="showHistory()" title="History">
+                <img src="img/symbol_history.svg" width="40" height="40">
             </div>
-            <div id="navClients" class="col deselected-nav navOption border rounded" onclick="showClients()">
-                <div class="row">
-                    <div class="col ">
-                        <img src="img/symbol_group.svg" width="30" height="30" class="align-bottom">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <label class="txtSmall-bold">Clients</label>
-                    </div>
-                </div>
+            <div id="navClients" class="col deselected-nav navOption border rounded" onclick="showClients()" title="Clients">
+                <img src="img/symbol_group.svg" width="40" height="40">
             </div>
         </div>
     </div>
