--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div id="pendingPrenotations" class="container-fluid">
             </div>
         </div>
-        <div id="history" style="display:none;">
+        <div id="performedServices" style="display:none;">
 
         </div>
         <div id="clients" style="display:none;">
@@ -134,14 +134,11 @@
 
     <div id="navBar" class="container-fluid fixed-bottom" style="display: none;">
         <div class="row">
-            <div id="navHome" class="col selected-nav navOption border rounded" onclick="showHome()" title="Home">
-                <img src="img/symbol_home.svg" width="40" height="40">
+            <div id="navHome" class="col navOption" onclick="showHome()" title="Home">
             </div>
-            <div id="navHistory" class="col deselected-nav navOption border rounded" onclick="showHistory()" title="History">
-                <img src="img/symbol_history.svg" width="40" height="40">
+            <div id="navPerformedServices" class="col navOption" onclick="showPerformedServices()" title="Performed services">
             </div>
-            <div id="navClients" class="col deselected-nav navOption border rounded" onclick="showClients()" title="Clients">
-                <img src="img/symbol_group.svg" width="40" height="40">
+            <div id="navClients" class="col navOption" onclick="showClients()" title="Clients">
             </div>
         </div>
     </div>
