--- a/index.html
+++ b/index.html
@@ -91,44 +91,47 @@
 
     <div id="workSpace" style="display: none;">
         <div id="home">
-            <div class="container-fluid">
-                <div class="row mt-2 mb-3">
-                    <div class="col">
+            <div class="container-fluid workSpaceUpperContainer">
+                <div class="row m-1 mt-2">
+                    <div class="col m-1">
                         <h1>Prenotations</h1>
                     </div>
-                    <div class="col">
-                        <div id="homeMenu" class="row mt-3">
-                            <div class="col d-flex justify-content-end">
-                                <button class="btn btn-outline-light m-1" title="Profile"><img src="img/symbol_person.svg" width="30" height="30"></button>
-                                <button class="btn btn-outline-light m-1" onclick="newPrenotation()" title="New prenotation"><img src="img/symbol_newPrenotation.svg" width="30" height="30"></button>
+                    <div id="homeMenu" class="col d-flex justify-content-end mt-2">
+                        <div class="row">
+                            <div class="col m-1" title="Profile">
+                                <img src="img/symbol_person.svg" width="35" height="35">
+                            </div>
+                            <div class="col m-1" onclick="newPrenotation()" title="New prenotation">
+                                <img src="img/symbol_newPrenotation.svg" width="35" height="35">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="expiredTitle" class="container-fluid">
-                <div class="row m-1">
-                    <div class="col">
-                        <h2>Expired</h2>
+            <div class="body-page">
+                <div id="expiredTitle" class="container-fluid">
+                    <div class="row m-1">
+                        <div class="col">
+                            <h2>Expired</h2>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="expiredPrenotations" class="container-fluid">
-            </div>
-            <div id="pendingTitle" class="container-fluid">
-                <div class="row m-1">
-                    <div class="col">
-                        <h2>Pending</h2>
+                <div id="expiredPrenotations" class="container-fluid"></div>
+                <div id="pendingTitle" class="container-fluid">
+                    <div class="row m-1">
+                        <div class="col">
+                            <h2>Pending</h2>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="pendingPrenotations" class="container-fluid">
+                <div id="pendingPrenotations" class="container-fluid"></div>
             </div>
         </div>
         <div id="performedServices" style="display:none;">
 
         </div>
         <div id="clients" style="display:none;">
+            <div id="clientsContainer" class="container"></div>
         </div>
     </div>
 
